tests/ui/derives/copy-drop-mutually-exclusive.stderr
error[E0184]: the trait `Copy` cannot be implemented for this type; the type has a destructor
  --> $DIR/copy-drop-mutually-exclusive.rs:3:10
   |
LL | #[derive(Copy, Clone)]
   |          ^^^^ `Copy` not allowed on types with destructors

error[E0184]: the trait `Copy` cannot be implemented for this type; the type has a destructor
  --> $DIR/copy-drop-mutually-exclusive.rs:10:10
   |
LL | #[derive(Copy, Clone)]
   |          ^^^^ `Copy` not allowed on types with destructors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0184`.
